--- a/index.html
+++ b/index.html
@@ -15,28 +15,36 @@
 <body>
     <!-- Header -->
     <header class="sticky-header">
-        <div class="container">
-            <img src="img/logo.png" alt="Logo Creative House" class="logo">
-            <nav aria-label="Navigation principale">
-                <ul class="nav-links">
-                    <li><a href="#home">Accueil</a></li>
-                    <li><a href="#about">À propos</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-            <a href="#quote" class="btn-quote">Demander un devis</a>
-        </div>
+        <!-- Div pour insérer le header -->
+    <div id="header-container"></div>
+
+    <!-- Main content -->
+    <section id="main-content">
+        <h1>Bienvenue chez Creative House</h1>
+        <p>Découvrez nos services innovants et créatifs...</p>
+    </section>
+
+    <script>
+        // Utilisation de JavaScript pour insérer le header
+         // Charger le header à partir du fichier header.html
+    fetch('header.html')
+    .then(response => response.text())
+    .then(data => {
+        document.querySelector('header').innerHTML = data;
+    });
+    </script>
     </header>
 
-    <!-- Section Héroïque avec Bannière Dynamique -->
-    <section class="dynamic-banner">
-        <div class="banner-content animate__animated animate__fadeIn">
-            <h1>Transformez vos idées en réalité visuelle</h1>
-            <p>Nous sublimons vos projets grâce à des technologies de pointe.</p>
-        </div>
-    </section>
+<!-- Section de la bannière dynamique -->
+<section class="dynamic-banner">
+    <div class="banner-content">
+        <h1>Transformez vos idées en réalité visuelle</h1>
+        <p>Nous sublimons vos projets grâce à des technologies de pointe.</p>
+    </div>
+</section>
+
+
+
 
     <!-- Section Services -->
     <section id="services" class="services section">
@@ -148,6 +156,16 @@
                 imageObserver.observe(image);
             });
         });
+		
+		document.addEventListener('DOMContentLoaded', function() {
+    const menuToggle = document.querySelector('.menu-toggle'); // Bouton pour afficher/masquer le menu
+    const menu = document.querySelector('.nav-links'); // Menu déroulant
+
+    menuToggle.addEventListener('click', function() {
+        menu.classList.toggle('active'); // Ajoute ou enlève la classe "active" pour afficher/masquer
+    });
+});
+
     </script>
 </body>
 </html>
